<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Main"
    android:background="@android:color/background_light">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Sauvegarde un son en moins de 10 s"
        android:id="@+id/textView3"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/abc_action_bar_content_inset_material"
        android:gravity="center_horizontal"
        android:textColor="#010101"
        android:background="@color/foreground_material_dark" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="10"
        android:id="@+id/Recorder_activity_LabelTimer"
        android:textColor="@android:color/primary_text_light"
        android:textSize="@dimen/abc_action_bar_default_height_material"
        android:textIsSelectable="true"
        android:layout_below="@+id/textView3"
        android:layout_alignRight="@+id/Recorder_activity_BtnReturn"
        android:layout_alignEnd="@+id/Recorder_activity_BtnReturn"
        android:layout_marginTop="49dp" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Recorder_activity_BtnRecord"
        android:text="@string/Record"
        android:textColor="#ffffff"
        android:textSize="@dimen/abc_action_button_min_width_overflow_material"
        android:background="@color/bleu"
        android:layout_below="@+id/Recorder_activity_LabelTimer"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Recorder_activity_BtnStopPlay"
        android:text="@string/Stop"
        android:textColor="#ffffff"
        android:textSize="@dimen/abc_action_button_min_width_overflow_material"
        android:background="@color/gris"
        android:layout_below="@+id/Recorder_activity_BtnRecord"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/retour"
        android:id="@+id/Recorder_activity_BtnReturn"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
